[gd_scene load_steps=12 format=3 uid="uid://csi0cefn3n3vs"]

[ext_resource type="Script" path="res://scenes/game_main/mini_games/vines_mini_game/vines_mini_game.gd" id="1_n36l5"]
[ext_resource type="PackedScene" uid="uid://caq6j3cq024bw" path="res://scenes/game_main/mini_games/vines_mini_game/entities/vine_1.tscn" id="2_qa6uf"]
[ext_resource type="Texture2D" uid="uid://dqbxmj6d7pr2" path="res://assets/spr_icons_16x16.png" id="2_xp4lf"]
[ext_resource type="PackedScene" uid="uid://bb1r625ch2x8j" path="res://scenes/game_main/mini_games/vines_mini_game/entities/vine_2.tscn" id="3_weqe4"]
[ext_resource type="Script" path="res://scenes/game_main/mini_games/vines_mini_game/line_drawer.gd" id="4_abqqj"]
[ext_resource type="AudioStream" uid="uid://b7ay6lelssyfi" path="res://scenes/game_main/mini_games/vines_mini_game/sounds/swing_cut/swing.wav" id="6_owl07"]
[ext_resource type="AudioStream" uid="uid://cvx16hjbt15wa" path="res://assets/sounds/win/win sound 2-1.wav" id="7_0op03"]
[ext_resource type="AudioStream" uid="uid://bpqwj7pgisumn" path="res://assets/sounds/misc/rustling_of_the_weeds.wav" id="8_58osj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_171vh"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14klj"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q2jf"]
atlas = ExtResource("2_xp4lf")
region = Rect2(0, 0, 16, 16)

[node name="VinesMiniGame2" type="Node2D"]
script = ExtResource("1_n36l5")
win_cooldown_sec = 0.95

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 1
clip_contents = true
offset_right = 378.0
offset_bottom = 216.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_171vh")

[node name="Title" type="Panel" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(378, 216)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_14klj")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/Title"]
custom_minimum_size = Vector2(378, 216)
layout_mode = 0
offset_right = 80.0
offset_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Title/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Title/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/Title/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cut the Vines"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/Title/CenterContainer/VBoxContainer/HBoxContainer"]
position = Vector2(203, 8)
texture = SubResource("AtlasTexture_3q2jf")
centered = false

[node name="Label2" type="Label" parent="PanelContainer/Title/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Hold        and drag across a vine to cut it."

[node name="Sprite2D2" type="Sprite2D" parent="PanelContainer/Title/CenterContainer/VBoxContainer"]
position = Vector2(38, 32)
texture = SubResource("AtlasTexture_3q2jf")
centered = false

[node name="MiniGame" type="Panel" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(378, 216)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_14klj")

[node name="Vine_1" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("2_qa6uf")]
position = Vector2(56, -72)
rotation = -0.0600396

[node name="Vine_6" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("2_qa6uf")]
position = Vector2(136, -72)
rotation = 0.0563397

[node name="Vine_4" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("2_qa6uf")]
position = Vector2(200, -56)
rotation = -0.0293423

[node name="Vine_5" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("2_qa6uf")]
position = Vector2(287, -48)
rotation = 0.122706

[node name="Vine_8" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("2_qa6uf")]
position = Vector2(328, -48)
rotation = 0.0940869

[node name="Vine_2" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("3_weqe4")]
position = Vector2(504, -7.15256e-06)
rotation = 1.51501

[node name="Vine_7" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("3_weqe4")]
position = Vector2(496, 104)
rotation = 1.51501

[node name="Vine_3" parent="PanelContainer/MiniGame" groups=["Vines"] instance=ExtResource("3_weqe4")]
position = Vector2(504, 88)
rotation = 1.63906

[node name="CutLine" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = 50
width = 2.0
default_color = Color(0.858824, 0.458824, 0.27451, 1)

[node name="LineDrawer" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 50
position = Vector2(-48, -24)
script = ExtResource("4_abqqj")

[node name="VineCutSound1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_owl07")
volume_db = 5.0
pitch_scale = 0.93
bus = &"Sound"

[node name="WinSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_0op03")
volume_db = 2.337
pitch_scale = 1.09
bus = &"Sound"

[node name="VineRustleSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_58osj")
volume_db = -10.0
bus = &"Sound"

[node name="WinTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.2
